Fix width of top bar on Overview page
The bar overflows on small screens. Limit to screen width.

--- a/website/overview/css/main.css
+++ b/website/overview/css/main.css
@@ -338,6 +338,7 @@ html, body {
 
 .container {
   padding: 15px;
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto; }
